--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"private": true,
 	"homepage": "http://danielortiz179499.github.io/armoniaspa",
 	"dependencies": {
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.13.0",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -38,5 +42,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"webpack": "^5.82.1",
+		"webpack-cli": "^5.1.1"
 	}
 }
