--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "armoniaspa",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "http://danielortiz179499.github.io/armoniaspa",
+	"homepage": "http://armoniaspa.armoniaspa.github.io/armoniaspa",
 	"dependencies": {
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
